Update 2018_09_04 - Kick-off.md

--- a/Projects/2018_09_04 - Kick-off.md
+++ b/Projects/2018_09_04 - Kick-off.md
@@ -1,1 +1,21 @@
 
+- The goal : let's create a crypto-currency for digityser. The possible use cases are listed.
+  - Not a financial asset.
+  - Asset back crypto.
+  - Public/private blockchain
+  
+
+- Use cases : 
+    - Pay your beers with crypto-currency
+    - 
+    
+- A tool
+- Jean has already produced a coin with an online tool : http://tokenfactory.netlify.com/#/factory 
+  - name : DigitYserCoinTest2
+  - total supply : 100 
+  - 
+  
+- Demonstration : sending money between 2 accounts : CIPHER mobile wallet and metamask. On Ethereum plateforme, you need to pay gas for each transaction.
+
+
+
