Update 2018_09_04 - Kick-off.md

--- a/Projects/2018_09_04 - Kick-off.md
+++ b/Projects/2018_09_04 - Kick-off.md
@@ -7,13 +7,30 @@
 
 - Use cases : 
     - Pay your beers with crypto-currency
+    - A coin to facilitate collaboration between people. Service area. Motivate people.
+    - 
+    
  
 - Jean has already produced a coin with an online tool : http://tokenfactory.netlify.com/#/factory 
   - name : DigitYserCoinTest2
   - total supply : 100 
   - 
-  
+
 - Demonstration : sending money between 2 accounts : CIPHER mobile wallet and metamask. On Ethereum plateforme, you need to pay gas for each transaction.
 
 
+- Tokenization : example of diamond.
 
+- Fongible : one unit is = to another.
+- Non fongible : like crypto kitties.
+
+- How do you calculate the profit?
+ => for the first stage of the experiment, the coin on the blockchain is no different as cash in the bar cash box.
+
+- Note : invite "---- " to come and talk about.
+
+- Etherscan
+
+-Other idea : tokenizing concert tickets 
+  -How can you make people download the tools they need to exchange the currency.
+  -How can people buy easily
