Update 2018_09_04 - Kick-off.md

--- a/Projects/2018_09_04 - Kick-off.md
+++ b/Projects/2018_09_04 - Kick-off.md
@@ -27,9 +27,10 @@
 - How do you calculate the profit?
  => for the first stage of the experiment, the coin on the blockchain is no different as cash in the bar cash box.
 
-- Note : invite "---- " to come and talk about. LE
+- Note : invite muntuit to come and talk about. LE
 
 - Etherscan
+- ETH Gas Station
 
 -Other idea : tokenizing concert tickets 
   -How can you make people download the tools they need to exchange the currency.
