Update 2018_09_04 - Kick-off.md

--- a/Projects/2018_09_04 - Kick-off.md
+++ b/Projects/2018_09_04 - Kick-off.md
@@ -1,5 +1,8 @@
 
-- The goal : let's create a crypto-currency for digityser. The possible use cases are listed.
+Philippe presents an idea to the block-chain garage community.
+
+- The goal : let's create a crypto-currency for digityser.
+
   - Not a financial asset.
   - Asset back crypto.
   - Public/private blockchain
